WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143337
[iOS] Fix AirPlay problem caused by
r182240
https://bugs.webkit.org/show_bug.cgi?id=143337
Summary
[iOS] Fix AirPlay problem caused by r182240
Eric Carlson
Reported
2015-04-02 09:34:27 PDT
r182240
caused AirPlay to be disabled in some circumstances.
Attachments
Proposed patch
(2.85 KB, patch)
2015-04-02 09:58 PDT
,
Eric Carlson
jer.noble
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-04-02 09:34:56 PDT
<
rdar://problem/20391647
>
Eric Carlson
Comment 2
2015-04-02 09:58:06 PDT
Created
attachment 249988
[details]
Proposed patch
Eric Carlson
Comment 3
2015-04-02 10:17:38 PDT
Committed
r182274
:
https://trac.webkit.org/r182274
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug