[iOS] Fix AirPlay problem caused by r182240 https://bugs.webkit.org/show_bug.cgi?id=143337

Reviewed by Jer Noble.

* html/HTMLMediaSession.cpp:
(WebCore::HTMLMediaSession::wirelessVideoPlaybackDisabled): Return false if the legacy attribute
    "x-webkit-airplay" has the value "allow".
* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::parseAttribute): Don't call webkitWirelessVideoPlaybackDisabled when
    processing "x-webkit-airplay" and "x-webkit-wirelessvideoplaybackdisabled", just consider
    the attribute/value.


Canonical link: https://commits.webkit.org/161368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182274 268f45cc-cd09-0410-ab3c-d52691b4dbfc